# APictureIsWorthSomeWords

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
doc2img_data/stories/: goldilocks.txt  gpt.txt  hare_tortoise.txt
mini_dataset/: nyt.csv
src/: Generating Images Using Stable Diffusion.ipynb  Main_Notebook.ipynb  Main_notebook.ipynb  config.yaml  df_mini_poems.csv  main.py  main.sh
src/doc2img/: analysis.py  clip_inference.py  config.py  dataloader.py  dataset.py  evaluate.py  generating_images.py  inference.py  main.py  summarization.py  summarization_hf.py  summarization_nouns.py  summarization_nouns_biggest_clusters.py  summarization_nouns_cluster_center.py  summarization_tfidf.py  train.py
src/doc2img/configs/: config_hf_bart_nyt.yaml  (+11 more)
src/experiment_bart_nyt/: df.csv
src/experiment_bart_poems/: df.csv
src/experiment_bart_stories/: df.csv
src/experiment_noun_based_big_nyt/: df.csv
src/experiment_noun_based_big_poems/: df.csv
src/experiment_noun_based_big_stories/: df.csv
src/experiment_noun_based_center_nyt/: df.csv
src/experiment_noun_based_center_poems/: df.csv
src/experiment_noun_based_center_stories/: df.csv
src/experiment_nouns_nyt/: df.csv
src/experiment_nouns_poems/: df.csv
src/experiment_pegasus_nyt/: df.csv
src/experiment_pegasus_poems/: df.csv
src/experiment_pegasus_stories/: df.csv
src/experiment_tfidf_nyt/: df.csv
src/experiment_tfidf_poems/: df.csv
src/experiment_tfidf_stories/: df.csv
tests/: test_1.py  test_dataloader.py  test_summaryzer_tfidf.py
(+21 files in other folders)
